--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-hi
+
+<!Doctype html>
+<head>
+    <title>Donyé Green</title> 
+<img src="/images/diamondboyII.tiff"> 
+</head>
+<body>
+    <h1><strong> Donyé Green</strong></h1>
+   <div>
+    <a href="#Early Life">Early Life</a>
+   </div> <div>
+    <a href="#Career">Career</a>
+   </div> <div>
+    <a href="#Activism">Activism</a>
+   </div> <div> 
+   <b> Donyé Kenneth Green 
+    </div>
+    </b> (born August 17th, 1999) is an American filmmaker, writer, actor, songwriter and photographer. 
+    He began is career as a commerical model, but slowly transitioned into acting with several independent short films.
+     <div> His breakout role was in the French-American co-production film <em> C'est Fini?</em> or <em> I Think My Boyfriend Hates Me?</em> </div> written by Green himself, but directed by French-Bolivian filmmaker Alicia Badault.<sup> 1 </sup> 
+     At it's Sundance debut, the film won the U.S. Grand Jury Prize for a dramatic picture. <div>
+        <sup>1</sup> Alicia Badault is a Paris born award-winning documentarian and filmmaker of Bolivian ancestry. She is also a muisician with over 1 million units sold.
+     </div>
+     <section> <h2> Early Life</h2> </section>
+     Green was born and raised in Oakland, California and is a graduate of Saint Mary's College Preparatory School. Initially, Green wanted to be a diplomat and studied international relations
+     at the Univeristy of Oregon in Eugene, Oregon. While at a party in the Hollywood hills, he met a film producer who encouraged him to use his skills for imagiantion and change to 
+     pursue a career in film  and televison. <div> Green has a B.A. in the Theory and Practice of Cinema from CSU Long Beach and a M.A. from New York Univeristy in Art and Public Policy.
+
+     </div> <div>
+     </div>
+     <section> <h2>Career</h2> </section>
+     Donyé Green has written several short films:
+     <ul>
+        <li> <b><em> Some Stuff Sticks</em></b></li>
+        <li><b><em> Sublime Motel</em></b></li>
+        <li><b><em> Chasing White Stripes</em></b></li>
+        <li><b><em> The Dimmmest Star</em></b></li>
+        Green has also starred, written and produced feature films. Green both starred in and wrote the highly acclaimed <b><em> I Think My Boyfriend Hates Me?</em></b>
+        which is a dramatic surrealist film lauded as one of the pioneer films of the Next Generation Queer Cinema canon. Other feauture films include:
+        <ul>
+        <li><b><em> The Last Black Irishman</em></b><em> writer/actor/producer</em></li>
+        <li><b><em> Tales of a Teenage Clone</em></b><em> writer/producer</em> </li>
+        <li><b><em> The White Cube</em></b><em> director/writer/producer</em> </li>
+        </ul>
+     </ul>
+    He is currently in production for his fourth feature, a period piece with Nicole Beharie as the lead, and Green as the director. A release date has yet to be announced.
+    <section> <h2> Activism</h2></section>
+    Donyé Green is a staunch advocate for independent, community-driven archival orgnizations. Green also uses his platform to advance the development of orgnizations dedicated to education on the impact of Intimate Partner Violence (IPV).
+    Green has published mutliple collections of essays on self-esteem, worth paradigms and IPV, such as <em> Himbo Diaries</em>, <em> Die a D.J.</em> and the photo-study <em> the heart of worthiness</em>. 
+    The film <em> I Think My Boyfriend Hates Me?</em> is based on an essay from <em> Himbo Diaires</em> of the same name.
+    <section> <h3> Donyé Green is based in New York, and São Paulo, Brazil.</h3></section>
+</body>
