--- a/assignments/index.html
+++ b/assignments/index.html
@@ -2,7 +2,7 @@
 <!Doctype html>
 <head>
     <title>Donyé Green</title> 
-<img src="/images/diamondboyII.tiff"> 
+<img src="diamond.jpeg"> 
 </head>
 <body>
     <h1><strong> Donyé Green</strong></h1>
