visual collection: zadie smith, literary it-girl

--- a/assignments/digital translation project/index.html
+++ b/assignments/digital translation project/index.html
@@ -12,6 +12,7 @@
         <div class="header-inner"> STORE </div> 
     </header>
         <nav>
+        <select name ="genre" id ="genre"> </select>
          <img class="logo" src="red.jpeg"> 
         </nav> 
         <img class= "img img-a" src="here.jpeg"> 
@@ -19,6 +20,8 @@
         <img class= "img img-two" src="stevie standing on a rock, Ginger Roger’s Historical Gay Beach, 2023.jpg">
         <video class= "get" autoplay muted controls width= "600px" height="600px" src="get_on_it! (720p).mp4"></video>
         <img class="img img-b" src="Denicia and Susy, Downtown L.A. 2024 (color).jpeg">
+        <img class ="img img-c" src="alli.jpg" >
+        <img class = "img img-d" src="alli_2.jpg">
     </nav>
     </body>
 </html>  
