visual collection project

--- a/assignments/viz_collect/office-hour-donyé/categories.html
+++ b/assignments/viz_collect/office-hour-donyé/categories.html
@@ -12,6 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/lsx7tgx.css">
+    <script src="script.js" async defer></script>
   </head>
   <body>
     <section class="categories">
@@ -20,7 +21,8 @@
         <div>Short Stories</div>
       </div>
       <div class="category">
-       <a href="essays.html"><img src="zadie_guitar.png" height="300px" /></a>
+        <img id="clickableImage" src="zadie_guitar.png" height="300px" /></a>
+
         <div>Essays</div>
       </div>
     </section>
