--- a/assignments/viz_collect/office-hour-donyé/index.html
+++ b/assignments/viz_collect/office-hour-donyé/index.html
@@ -18,9 +18,8 @@
       <div> Zadie Smith</div>
       <div> Literary It Girl</div>
       <a href="categories.html"><img src="zadie_smith.png" width="500" /></a>
-      <div class = bio> 
-        <div> Zadie Smith has contributed numerous short stories, profiles, essays, and personal histories to The New Yorker since her story “Stuart” was published in the magazine in 1999, when she was twenty-four. Her body of work includes essays, short stories, and novels, such as “White Teeth”; “On Beauty,” which was short-listed for the Man Booker Prize and won the 2006 Orange Prize for fiction; “Swing Time”; and “The Fraud,” which came out in 2023. Fiction, Smith argues, is “a medium that must always allow itself . . . the possibility of expressing intimate and inconvenient truths.” Her stories are full of those truths, whether she’s imagining an immigrant living in servitude in London, villagers held hostage by armed strangers, British tourists drifting down a lazy river, or an unrepentant Billie Holiday near the end of her life. - <em> The New Yorker</em></div>
-      </div>
+      <div class = "bio"> 
+      <div> Zadie Smith has contributed numerous short stories, profiles, essays, and personal histories to The New Yorker since her story “Stuart” was published in the magazine in 1999, when she was twenty-four. Her body of work includes essays, short stories, and novels, such as “White Teeth”; “On Beauty,” which was short-listed for the Man Booker Prize and won the 2006 Orange Prize for fiction; “Swing Time”; and “The Fraud,” which came out in 2023. Fiction, Smith argues, is “a medium that must always allow itself . . . the possibility of expressing intimate and inconvenient truths.” Her stories are full of those truths, whether she’s imagining an immigrant living in servitude in London, villagers held hostage by armed strangers, British tourists drifting down a lazy river, or an unrepentant Billie Holiday near the end of her life. - <em> The New Yorker</em></div>
     </section>
   </body>
 </html>
