--- a/assignments/viz_collect/office-hour-donyé/short_stories.html
+++ b/assignments/viz_collect/office-hour-donyé/short_stories.html
@@ -10,7 +10,8 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://use.typekit.net/lsx7tgx.css">
     </head>
     <body> 
         <section class="short">
