--- a/assignments/digital translation project/index.html
+++ b/assignments/digital translation project/index.html
@@ -6,22 +6,31 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://use.typekit.net/gis4pov.css">
+<link rel="stylesheet" href="https://use.typekit.net/gis4pov.css">
     </head>
     <body>
-    <header>
-        <div class="header-inner"> STORE </div> 
-    </header>
+        <div class="dropdown">
+            <button class="dropdown-button">Menu</button>
+            <div class="dropdown-content">
+              <a href="DusktoDawn.html">dusk to dawn</a>
+              <a href="(in)disposable.html">the (in)disposable project</a>
+              <a href="personal.html">personal</a>
+              <a href="index.html">home</a>  
+            </div>
+          </div>
         <nav>
-        <select name ="genre" id ="genre"> </select>
-         <img class="logo" src="red.jpeg"> 
-        </nav> 
-        <img class= "img img-a" src="here.jpeg"> 
-         <img class= "img img-one" src="7 deadly sins.JPG">
-        <img class= "img img-two" src="stevie standing on a rock, Ginger Roger’s Historical Gay Beach, 2023.jpg">
-        <video class= "get" autoplay muted controls width= "600px" height="600px" src="get_on_it! (720p).mp4"></video>
-        <img class="img img-b" src="Denicia and Susy, Downtown L.A. 2024 (color).jpeg">
-        <img class ="img img-c" src="alli.jpg" >
-        <img class = "img img-d" src="alli_2.jpg">
-    </nav>
+            <img id="clickableImage" class="logo" src="red.jpeg"> 
+            <div class= "text"></div>
+            <div class= "message"><h2> hi hottie! <div>
+                Welcome to the R.E.D. Media Gallery. 
+            </div>
+            <img src="self-esteem I.jpg" width="800">
+                <div> Click the logo to watch.</div>
+                Release the dropdown to view.</h2></div>
+                </div>
+        </div>
+        </div>
     </body>
+    <script src="script.js" async defer></script>
 </html>  
